添加新的工具类

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="utils.zzh.com.utils.MainActivity">
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/sour_pic_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-/>
+        android:text="原图" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/sour_pic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerInside"/>
+
+    <TextView
+        android:id="@+id/watermark_pic_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="水印" />
+
+    <ImageView
+        android:id="@+id/wartermark_pic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerInside"/>
+
+</LinearLayout>
