--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,7 @@
         <item name="android:typeface">monospace</item>
     </style>
 
+    <style name="font" parent="AppTheme">
+        <item name="android:fontFamily">@font/lobfont</item>
+    </style>
 </resources>
