--- a/collectionutils/src/main/res/layout/layout_toast_view.xml
+++ b/collectionutils/src/main/res/layout/layout_toast_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.dz.utlis.view.ToastViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
+<com.dz.utlis.view.RadiusRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:minHeight="40dp"
@@ -22,4 +22,4 @@
         tools:text="这是一个生气的故事" />
 
 
-</com.dz.utlis.view.ToastViewGroup>
+</com.dz.utlis.view.RadiusRelativeLayout>
